Bug 50530 - UI: Changing font size makes the cursor to disappear
Summary: UI: Changing font size makes the cursor to disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: All All
: low trivial
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
: 104068 (view as bug list)
Depends on:
Blocks: Text-Cursor
  Show dependency treegraph
 
Reported: 2012-05-31 03:24 UTC by martinstingl
Modified: 2019-07-05 03:51 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description martinstingl 2012-05-31 03:24:33 UTC
Steps to reproduce:
-create a text field
-enter some text
-change the font size by clicking on the GUI elements

Bug: The cursor disappears in the text field even though writing continues when entering a character with the keyboard. 
After the first character is entered the cursor appears again.
Comment 1 Hashem Masoud 2012-09-24 06:10:54 UTC
(In reply to comment #0)
> Steps to reproduce:
> -create a text field
> -enter some text
> -change the font size by clicking on the GUI elements
Which GUI element do you mean?
Comment 2 martinstingl 2012-09-24 06:16:45 UTC
Clicking inside the "Text Formatting" toolbar on the "Font Size" arrow (and selecting a different font size) makes the cursor to disappear.
Comment 3 Hashem Masoud 2012-10-20 13:51:28 UTC
(In reply to comment #2)
> Clicking inside the "Text Formatting" toolbar on the "Font Size" arrow (and
> selecting a different font size) makes the cursor to disappear.

Works for me:
Version 3.6.1.2 (Build ID: e29a214) Slackware Linux 13.37

Double-click on the text and the cursor won't disappear.
Comment 4 martinstingl 2012-10-20 18:31:01 UTC
This is true but the bug is still there directly after creating a text frame and changing font size. Bug: The cursor disappears.
Comment 5 Hashem Masoud 2012-10-21 06:50:47 UTC
(In reply to comment #4)
> This is true but the bug is still there directly after creating a text frame
> and changing font size. Bug: The cursor disappears.

The correct procedure you should follow (which I did in my earlier test) is:
1. Create text field.
2. Type something into it.
3. Change size.

If you skip point 2, you won't be able to see any cursor, because the text field will not be created in the first place.
Comment 6 martinstingl 2012-12-03 07:36:41 UTC
Hashem Masoud: I did not skip point 2.

The cursor inside a text field disappears every time the font size is changed.
Comment 7 Joel Madero 2014-11-06 21:08:28 UTC
Needs independently confirmed by QA - moving to UNCONFIRMED. Thanks
Comment 8 Buovjaga 2014-11-16 17:02:08 UTC
Confirmed. To reproduce: don't select the text, just stay inside the word and select the font size from the dropdown. This makes the text cursor invisible until you press arrow keys or similar.

Win 7 64-bit Version: 4.4.0.0.alpha2+
Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08

Ubuntu 14.10 64-bit Version: 4.4.0.0.alpha2+
Build ID: 3cf226622a3d8c09d655034dbcc81695f1662b87
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-11-15_23:24:22
Comment 9 QA Administrators 2015-12-20 16:12:27 UTC Comment hidden (obsolete)
Comment 10 martinstingl 2015-12-21 23:32:23 UTC
The bug ist still present with LibreOffice 5.0.4.2 running in Windows 7 32Bit.
Comment 11 Buovjaga 2016-12-20 14:18:38 UTC
*** Bug 104068 has been marked as a duplicate of this bug. ***
Comment 12 ckm 2017-03-22 07:20:22 UTC
Libre Calc 5.1.2.2
OS: LMDE 2

Cursor and buttons on prompt windows disappear when selecting whole columns or rows and changing font.
Comment 13 Buovjaga 2017-03-22 08:06:57 UTC
Still repro.

Win 7 Pro 64-bit Version: 5.4.0.0.alpha0+
Build ID: 2356bfdb1b99a93fcb35fefc0f587158e7d160c2
CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-03-20_00:30:32
Locale: fi-FI (fi_FI); Calc: CL
Comment 14 Telesto 2018-02-15 15:50:44 UTC
Repro
Version: 6.1.0.0.alpha0+
Build ID: 3c913c3844acae8ee0d80ab174133bdc7677efea
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-14_00:19:27
Locale: nl-NL (nl_NL); Calc: CL
Comment 15 Jim Raykowski 2019-06-24 00:41:23 UTC
Hi all, here is a patch for this and shapes. It works for font name changes as well as font size and also fixes some other buggy behavior of cursor not reappearing depending on order of attribute control use.

https://gerrit.libreoffice.org/#/c/74613/
Comment 16 Buovjaga 2019-06-24 14:31:54 UTC
(In reply to Jim Raykowski from comment #15)
> Hi all, here is a patch for this and shapes. It works for font name changes
> as well as font size and also fixes some other buggy behavior of cursor not
> reappearing depending on order of attribute control use.
> 
> https://gerrit.libreoffice.org/#/c/74613/

Confirmed the fix for font name & size changes!
Comment 17 Jim Raykowski 2019-06-24 21:18:43 UTC
Buovjaga, thanks for testing. I am trying to make a unified patch for this and bug 126016 although it looks as if these may require separate patches.
Comment 18 Jim Raykowski 2019-06-24 21:22:27 UTC
(In reply to Jim Raykowski from comment #17)
> Buovjaga, thanks for testing. I am trying to make a unified patch for this
> and bug 126016 although it looks as if these may require separate patches.

oops, bug 126061 is the related bug.
Comment 19 Jim Raykowski 2019-06-26 03:59:32 UTC
I'm throwing in the towel on trying to do a unified bug fix so let's put this one in as it is.
Comment 20 Commit Notification 2019-06-26 04:00:57 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/80f18e7e028e9ca431aef281ab98bea99ad19fa3%5E%21

tdf#50530 Make text edit outliner view show cursor

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2019-07-04 08:50:54 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/f8ba3e24a48752414c5f69faec7d71ba387e1441%5E%21

tdf#50530 Make text edit outliner view show cursor

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.