tdf#50530 Make text edit outliner view show cursor

Change-Id: I73b4dcacdf068daff02b8fe8156c58debfcdf704
Reviewed-on: https://gerrit.libreoffice.org/74613
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>