sd/source/ui/view/drtxtob1.cxx
@@ -756,6 +756,12 @@ void TextObjectBar::Execute( SfxRequest &rReq )
 
             // to refresh preview (in outline mode), slot has to be invalidated:
             mpViewShell->GetViewFrame()->GetBindings().Invalidate( SID_PREVIEW_STATE, true );
+
+            if ( pOLV )
+            {
+                pOLV->ShowCursor();
+                pOLV->GetWindow()->GrabFocus();
+            }
         }
         break;
     }
